<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TempActivity">

    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/length_num"
                android:layout_column="0"
                android:hint="@string/input_num"/>
    </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/volume_radio_group"
                android:layout_column="0">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahr_rad"
                    android:id="@+id/fahr_radio"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_rad"
                    android:id="@+id/celsius_radio"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin_rad"
                    android:id="@+id/kelvin_radio"/>
        </RadioGroup>
    </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compute_conv"
                android:id="@+id/compute_button"
                android:layout_column="0"/>
    </TableRow>

</TableLayout>
